syntax = "proto3";

package productInfo;

option go_package = "genproto/product_info";

service productInfo {
  rpc getProduct(productId) returns (product);
  rpc addProduct(product) returns (productId);
  rpc searchProducts(productName) returns (stream product);
}

message productName {
  string value = 1;
}

message productId {
  string value = 1;
}

message product {
  string id = 1;
  string name = 2;
  string desc = 3;
  float price = 4;
}
